@@ -1,0 +1,5 @@
+int
+lx (int oi, int mb)
+{
+  return (oi < mb) < (mb < oi);
+}
