@@ -1,3 +1,10 @@
+2017-04-04  Segher Boessenkool  <segher@kernel.crashing.org>
+
+	PR rtl-optimization/60818
+	* simplify-rtx.c (simplify_binary_operation_1): Do not replace
+	a compare of comparisons with the thing compared if this results
+	in a different machine mode.
+
 2017-04-03  Jonathan Wakely  <jwakely@redhat.com>
 
 	* alias.c (base_alias_check): Fix typo in comment.
